Regression: Crash when using "Mask From Cavity" #101595

Closed
opened 2022-10-04 17:48:31 +02:00 by Julien Kaspar · 8 comments
Member

System Information
Operating system: Linux-5.15.0-48-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.85.02

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-10-04 12:59, hash: 0458b24a23
Worked: 3.4.0 Alpha, branch: master, commit date: 2022-09-30 08:29, hash: 2004827bc9
Caused by 416d1d0393

Short description of error
Under certain circumstances Blender is easy to crash after or when using the "Mask From Cavity" operator.

Exact steps for others to reproduce the error

  • Add a new object
  • Enter sculpt mode
  • Use "Mask" -> "Mask From Cavity"

Alternatively:

  • On an existing object enter sculpt mode
  • Use "Mask" -> "Mask From Cavity"
  • Add a modifier like Bevel Or Subdivision Surface
**System Information** Operating system: Linux-5.15.0-48-generic-x86_64-with-glibc2.35 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.85.02 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-10-04 12:59, hash: `0458b24a23` Worked: 3.4.0 Alpha, branch: master, commit date: 2022-09-30 08:29, hash: `2004827bc9` Caused by 416d1d0393 **Short description of error** Under certain circumstances Blender is easy to crash after or when using the "Mask From Cavity" operator. **Exact steps for others to reproduce the error** - Add a new object - Enter sculpt mode - Use "Mask" -> "Mask From Cavity" Alternatively: - On an existing object enter sculpt mode - Use "Mask" -> "Mask From Cavity" - Add a modifier like Bevel Or Subdivision Surface
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member
bpy.ops.sculpt.mask_from_cavity(use_automask_settings=False)  # Operator

# backtrace
Exception Record:

ExceptionCode         : EXCEPTION_ACCESS_VIOLATION
Exception Address     : 0x00007FF6D08A5436
Exception Module      : blender.exe
Exception Flags       : 0x00000000
Exception Parameters  : 0x2
	Parameters[0] : 0x0000000000000000
	Parameters[1] : 0x0000000000000000


Stack trace:
blender.exe         :0x00007FF6D08A53F0  sculpt_attr_elem_count_get C:\blender-git\blender\source\blender\blenkernel\intern\paint.cc:2400
blender.exe         :0x00007FF6D08A5470  sculpt_attr_update C:\blender-git\blender\source\blender\blenkernel\intern\paint.cc:2554
blender.exe         :0x00007FF6D08A5860  sculpt_attribute_update_refs C:\blender-git\blender\source\blender\blenkernel\intern\paint.cc:2790
blender.exe         :0x00007FF6D08A94B0  BKE_sculpt_object_pbvh_ensure C:\blender-git\blender\source\blender\blenkernel\intern\paint.cc:2293
blender.exe         :0x00007FF6D08A5BD0  sculpt_update_object C:\blender-git\blender\source\blender\blenkernel\intern\paint.cc:1754
blender.exe         :0x00007FF6D08A9E00  BKE_sculpt_update_object_after_eval C:\blender-git\blender\source\blender\blenkernel\intern\paint.cc:1917
blender.exe         :0x00007FF6D0A79810  mesh_build_data C:\blender-git\blender\source\blender\blenkernel\intern\DerivedMesh.cc:1612
blender.exe         :0x00007FF6D0A7BDF0  makeDerivedMesh C:\blender-git\blender\source\blender\blenkernel\intern\DerivedMesh.cc:1744
blender.exe         :0x00007FF6D0A0D8C0  BKE_object_handle_data_update C:\blender-git\blender\source\blender\blenkernel\intern\object_update.cc:165
blender.exe         :0x00007FF6D0A0D720  BKE_object_eval_uber_data C:\blender-git\blender\source\blender\blenkernel\intern\object_update.cc:329
blender.exe         :0x00007FF6D0C616C0  blender::deg::`anonymous namespace'::evaluate_node C:\blender-git\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:104
blender.exe         :0x00007FF6D0C61460  blender::deg::`anonymous namespace'::deg_task_run_func C:\blender-git\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:128
blender.exe         :0x00007FF6D59838C0  tbb::internal::function_task<Task>::execute C:\blender-git\lib\win64_vc15\tbb\include\tbb\task.h:1060
tbb.dll             :0x00007FFB09D7F220  tbb::recursive_mutex::scoped_lock::internal_try_acquire
tbb.dll             :0x00007FFB09D7F220  tbb::recursive_mutex::scoped_lock::internal_try_acquire
blender.exe         :0x00007FF6D1669D20  tbb::internal::task_group_base::wait C:\blender-git\lib\win64_vc15\tbb\include\tbb\task_group.h:168
blender.exe         :0x00007FF6D0C60F10  blender::deg::deg_evaluate_on_refresh C:\blender-git\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:459
blender.exe         :0x00007FF6D0884E60  scene_graph_update_tagged C:\blender-git\blender\source\blender\blenkernel\intern\scene.cc:2680
blender.exe         :0x00007FF6D0B6E7E0  wm_event_do_notifiers C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.cc:689
blender.exe         :0x00007FF6D0B533A0  WM_main C:\blender-git\blender\source\blender\windowmanager\intern\wm.c:646
blender.exe         :0x00007FF6CFC212F0  main C:\blender-git\blender\source\creator\creator.c:580
blender.exe         :0x00007FF6D5B7F290  __scrt_common_main_seh D:\a\_work\1\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288
KERNEL32.DLL        :0x00007FFB114B7020  BaseThreadInitThunk
ntdll.dll           :0x00007FFB13402680  RtlUserThreadStart

version: 3.4.0 Alpha, branch: master, commit date: 2022-10-04 15:35, hash: 4d9588ee45, type: Release
build date: 2022-10-04, 15:56:38
platform: 'Windows-10-10.0.19043-SP0'

``` bpy.ops.sculpt.mask_from_cavity(use_automask_settings=False) # Operator # backtrace Exception Record: ExceptionCode : EXCEPTION_ACCESS_VIOLATION Exception Address : 0x00007FF6D08A5436 Exception Module : blender.exe Exception Flags : 0x00000000 Exception Parameters : 0x2 Parameters[0] : 0x0000000000000000 Parameters[1] : 0x0000000000000000 Stack trace: blender.exe :0x00007FF6D08A53F0 sculpt_attr_elem_count_get C:\blender-git\blender\source\blender\blenkernel\intern\paint.cc:2400 blender.exe :0x00007FF6D08A5470 sculpt_attr_update C:\blender-git\blender\source\blender\blenkernel\intern\paint.cc:2554 blender.exe :0x00007FF6D08A5860 sculpt_attribute_update_refs C:\blender-git\blender\source\blender\blenkernel\intern\paint.cc:2790 blender.exe :0x00007FF6D08A94B0 BKE_sculpt_object_pbvh_ensure C:\blender-git\blender\source\blender\blenkernel\intern\paint.cc:2293 blender.exe :0x00007FF6D08A5BD0 sculpt_update_object C:\blender-git\blender\source\blender\blenkernel\intern\paint.cc:1754 blender.exe :0x00007FF6D08A9E00 BKE_sculpt_update_object_after_eval C:\blender-git\blender\source\blender\blenkernel\intern\paint.cc:1917 blender.exe :0x00007FF6D0A79810 mesh_build_data C:\blender-git\blender\source\blender\blenkernel\intern\DerivedMesh.cc:1612 blender.exe :0x00007FF6D0A7BDF0 makeDerivedMesh C:\blender-git\blender\source\blender\blenkernel\intern\DerivedMesh.cc:1744 blender.exe :0x00007FF6D0A0D8C0 BKE_object_handle_data_update C:\blender-git\blender\source\blender\blenkernel\intern\object_update.cc:165 blender.exe :0x00007FF6D0A0D720 BKE_object_eval_uber_data C:\blender-git\blender\source\blender\blenkernel\intern\object_update.cc:329 blender.exe :0x00007FF6D0C616C0 blender::deg::`anonymous namespace'::evaluate_node C:\blender-git\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:104 blender.exe :0x00007FF6D0C61460 blender::deg::`anonymous namespace'::deg_task_run_func C:\blender-git\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:128 blender.exe :0x00007FF6D59838C0 tbb::internal::function_task<Task>::execute C:\blender-git\lib\win64_vc15\tbb\include\tbb\task.h:1060 tbb.dll :0x00007FFB09D7F220 tbb::recursive_mutex::scoped_lock::internal_try_acquire tbb.dll :0x00007FFB09D7F220 tbb::recursive_mutex::scoped_lock::internal_try_acquire blender.exe :0x00007FF6D1669D20 tbb::internal::task_group_base::wait C:\blender-git\lib\win64_vc15\tbb\include\tbb\task_group.h:168 blender.exe :0x00007FF6D0C60F10 blender::deg::deg_evaluate_on_refresh C:\blender-git\blender\source\blender\depsgraph\intern\eval\deg_eval.cc:459 blender.exe :0x00007FF6D0884E60 scene_graph_update_tagged C:\blender-git\blender\source\blender\blenkernel\intern\scene.cc:2680 blender.exe :0x00007FF6D0B6E7E0 wm_event_do_notifiers C:\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.cc:689 blender.exe :0x00007FF6D0B533A0 WM_main C:\blender-git\blender\source\blender\windowmanager\intern\wm.c:646 blender.exe :0x00007FF6CFC212F0 main C:\blender-git\blender\source\creator\creator.c:580 blender.exe :0x00007FF6D5B7F290 __scrt_common_main_seh D:\a\_work\1\s\src\vctools\crt\vcstartup\src\startup\exe_common.inl:288 KERNEL32.DLL :0x00007FFB114B7020 BaseThreadInitThunk ntdll.dll :0x00007FFB13402680 RtlUserThreadStart ``` --- version: 3.4.0 Alpha, branch: master, commit date: 2022-10-04 15:35, hash: 4d9588ee454e, type: Release build date: 2022-10-04, 15:56:38 platform: 'Windows-10-10.0.19043-SP0'

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice
Pratik Borhade changed title from Crash when using "Mask From Cavity" to Regression: Crash when using "Mask From Cavity" 2022-10-05 06:43:24 +02:00
Member

Added subscribers: @PratikPB2123, @JosephEagar

Added subscribers: @PratikPB2123, @JosephEagar

This issue was referenced by 7119582b66

This issue was referenced by 7119582b6686542f75858d48266a2a5a8664f8c0
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Joseph Eagar self-assigned this 2022-10-11 18:59:34 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101595
No description provided.