Sculpt: Fix T101595: sculpt_attribute_update_refs called in wrong place

Needs to go after the assignment to ob->sculpt->pbvh, not before.